This file describes the changes to the Log for C++ library. See the CVS repository for more detailed descriptions.

2002-07-05 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* src/StringUtil.hh, src/StringUtil.cpp: added split() method.

	* src/PropertyConfiguratorImpl.hh, src/PropertyConfiguratorImpl.hh:
	changed the way configuration is done: first instantatiate all
	Appenders defined in the config, then add them to Categories where
	necessary. Multiple Appenders per Category are now supported. 
	Currently doConfigure() leaks all Appenders, as they will be not be
	owned by any Categories. This will be fixed in the future by having
	the LoggerRepository maintain ownership of all Categories, Appenders,
	etc.

2002-07-04 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* include/log4cpp/BasicConfigurator.hh, src/BasicConfigurator.cpp:
	added.

	* src/Properties.hh, src/Properties.cpp: added Log4j style variable
	substitution: ${NAME} will be substituted with environment variable
	NAME or if not found with property NAME. '${${}' denotes a literal
	'${' sequence. 
	
2002-07-03 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* src/SyslogAppender.cpp (SysLogAppender()): accept '-1' for facility and portNumber, 
	implying the 'default value'.

	* src/ConfiguratorSkeleton.cpp: changed property names to JavaBeans/log4j style. 
	Use the appender name as name (duh) instead of the 'name' property.
	Don't set a layout if none have been specified. 
	Use std::string::size_type where applicable.
	Made some exception messages clearer.
	Compacted the code a bit.	

	* src/Properties.hh, src/Properties.cpp: added, moved
	PropertyConfigurator::parseConfig() to load().
	* src/PropertyConfiguratorImpl.hh, src/PropertyConfiguratorImpl.cpp:
	added. This class is a merge of PropertyConfigurator and 
	ConfiguratorSkeleton. ConfiguratorSkeleton is not generic enough to 
	be exposed in the API.
	* include/log4cpp/PropertyConfigurator.hh,